syntax = "proto3";
option go_package = "github.com/satont/twir/libs/grpc/generated/api/twitch_protected";
package api.twitch_protected;


message SearchCategoriesRequest {
	string query = 1;
}

message SearchCategoriesResponse {
	message Category {
		string id = 1;
		string name = 2;
		string image = 3;
	}

	repeated Category categories = 1;
}

message SetChannelInformationRequest {
	string category_id = 1;
	string title = 2;
}
